# manipulation

./: .gitignore  README.md  benchmark-700-v1.pickle  benchmark-analysis-v1.ipynb  benchmark_v1.ipynb  deprecated_tossing_iiwa.ipynb  extra_bin.sdf  iiwa_toss.ipynb  iiwa_toss_basketball.ipynb  iiwa_toss_jointangles.ipynb  iiwa_toss_jointangles_v2.ipynb  iiwa_toss_mustardbottle.ipynb  pyproject.toml  short_bin.sdf  tossing_iiwa.ipynb  traj-calculations.nb  true-aim-test.ipynb
sdfs/: basketball_hoop.mtl  bball.sdf  bball_small.mtl  hoop.sdf
src/: __init__.py  benchmark.py  drake_helpers.py  ik.py  throw.py  trajectory.py
