[tool.poetry]
name = "manipulation"
version = "0.1.0"
description = ""
authors = ["dxy <daniel.yang17@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.19.4"
jupyter = "^1.0.0"
pyyaml = "^5.3.1"
umsgpack = "^0.1.0"
altair = "^4.1.0"
pydot = "^1.4.1"
plotly = "^4.12.0"
matplotlib = "^3.3.2"
scipy = "^1.5.4"
mpld3 = "^0.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
